# Evoke

./: .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle.kts
LICENSES/: Frida-Gum.txt
app/: build.gradle.kts
app/src/androidTest/java/com/smartdone/vm/: ExampleInstrumentedTest.kt
app/src/androidTest/kotlin/com/smartdone/vm/: ApkPureLaunchAutomationTest.kt  DirectApkLaunchAutomationTest.kt  EvokeLaunchFlowTest.kt  EvokeSettingsRepositoryTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/smartdone/vm/: MainActivity.kt  TestEntryPoints.kt  VmHostApplication.kt
app/src/main/kotlin/com/smartdone/vm/permission/: PermissionRequestActivity.kt
app/src/main/kotlin/com/smartdone/vm/runtime/: EmbeddedVirtualActivityController.kt  IntentProxyActivity.kt  NativeCompatibilityLogger.kt  RunningAppsActionReceiver.kt  StubLaunchReporter.kt  SystemBroadcastRelay.kt
app/src/main/kotlin/com/smartdone/vm/stub/: StubActivities.kt  StubProviders.kt  StubServices.kt
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/smartdone/vm/: ExampleUnitTest.kt
core-native/: build.gradle.kts
core-native/src/main/cpp/: CMakeLists.txt  io_redirect.cpp  jni_hook.cpp  native_engine.cpp
core-virtual/: build.gradle.kts
core-virtual/src/main/kotlin/lh/: f.kt
core-virtual/src/main/kotlin/ph/: c0.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+77 files in other folders)
